# nhive

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml
.github/workflows/: main.yml
.gocache/: trim.txt
.gocache/00/: 000c74150807a54e267d100dc56feb5925d57d74253cafc340bcbeb7dd6249db-a  0017b9726b189eb00acba81b444067c79dfb33cd04f8297b6bafaf2935db79ed-a  00205d6d7a5cf0545f302f872e2f0f8bc47f160727b79dbe1e125201a5cfce20-a  004ea0f0e85e68144d0dba42e49b8faf02459bf3cbc7e0df6d7a460487dfb523-d  00550757f378fa785053644685b64518fa27b92cbfff6fae5cde642da82912fd-a  007e7fee03b27c6c81d1949a97c5cc280b042dfd85bf3328b845fc911db92d02-a  00975d7badc7c9b20db9457eec4308b337b4836c50e4d2462a4f16b41819293c-a
.gocache/01/: 01107f3841a2ff14f79054b8d9bd1438612821c65458c3a149ae5b85697f01a2-a  012b5e8eae6afb516d530acad2473623fc0ca1833d68b322232f4d8684158cb0-a  014777769fdba45b8a4a0e02fd32980686223a40cf247e39aa26040d27bb7323-a  0172b7e847d3c44bad47e7dddc93e6c87e20590fd3140d4fc0d6df1a70f59137-a  0173cd776e3666a2b0bad7b7a8865da91ff7ae2582398f3568375e0fcbe7db1c-a  019cf52c17d234f7807b56ea386ecaaa7a1e8d46c0da46ec804e4bca43a2355e-a  019ed06b711761a6e4cd914b16f5b09dc09f780df1c5a58ec966ab35ca45df24-a  019fdae06241b79ff67067ce8df0e60140ef13fb0d1241565dab8b6a896da71d-a  01c5cf8844f97d0868ca760cbc7d4158fe7914dc214c0f1c3174eb4919de8fc8-a  01ca923e86f43d1bde3b7ff48dee81da965995041f05d946bf07998e0c349650-a  01cace16513cc1ff6a02a634946440b3348e74738240c2e6e4c2cc4cdff6eae3-a  01cd919560a29ae4514b7783f274b31330a89285e65b283cfd63c749310cf208-a
.gocache/02/: 02095eb38f9687c9685e1f2427a101d03e63153386b62cb420986cf5667dd7f6-a  023eab6bd8f67d941f994a7649d9d0f0682abd8ed0f135859f52a6a0d5378f04-d  0242ba6368b3f0d56a830b03327fe92f5a86548234ef238249cda30a251daafd-a  02a58bf7aab77a68500c5c03c2d81d5c2edb633bcf871eb6165fa65a14668141-d  02a843df2b78887ecd34d4982ce698a3d6614b730b19a265de2fd5842ef2caaf-a  02d47ee79e650b653948ab5de605275baffcd72ee561a1547fdad292ef2923b7-a  02def301e01ed70af65951cf7ac43f45bf7ebd03836412f7eb0d0f1564b9cb99-a  02e3812236d85159354a0c415a80619d5e1927c3f38e2548e6d9d0ac8aa2d6fb-a  02ec14f849d700379411712cc53688c5ea58492cbdbeb281b78a6d0129b0de8a-d  02fd422af06efc735ce714680e5f06da75b24022fb23ead7f347f6b1225c8f1b-a
.gocache/03/: 031087557167e45ddd5ad496f20e0b1d28f827028d544f2782a41415a7f9d72b-a  0315834295724a76d4fe910fa5b1ea9500e41cc0552b7b2b3e6688bc7452b533-a  031c7241abfc55d74e9f240e94637bdb954cb958f2ecd204a19bca24feadc8d3-a  032f38d0cc29a9820c878bdcd11a92d818710a7a7b39dea7f85016f61f4fe018-a  0338518b984cc7cd2fc838ce994774c58978e5c99904014e94b7f61e3db00156-a  035102e754a99115f5fa8530aa50b1f8fc9b7c957f7dc0e026919c180061ed5b-a  03c8cbc44565a014c421af6cc026167db14491459072a19c1e3f3d266e5f3e33-d  (+5 more)
comment-service/: Dockerfile  go.mod  go.sum
content-service/: Cargo.toml  Dockerfile
content-service/crates/storage/: Cargo.toml
content-service/crates/storage/src/: cache.rs  lib.rs
gateway/: Dockerfile  go.mod  go.sum
library-service/: Dockerfile  go.mod
novel-service/: Dockerfile  go.mod  go.sum
proto/: go.mod  go.sum
scripts/: init-db.sql  seed.go
search-service/: .gitignore  Cargo.toml  Dockerfile
search-service/crates/domain/src/: lib.rs
search-service/crates/grpc-server/: Cargo.toml
search-service/crates/grpc-server/src/: main.rs
search-service/crates/indexer/: Cargo.toml
search-service/crates/indexer/src/: lib.rs
search-service/crates/subscriber/: Cargo.toml
services/content-service/: Cargo.toml  Dockerfile
services/content-service/crates/domain/src/: errors.rs  lib.rs  models.rs
services/content-service/crates/grpc-server/: Cargo.toml
services/content-service/crates/storage/src/: postgres.rs
user-service/: Dockerfile  go.mod  go.sum
(+2855 files in other folders)
