[workspace]
members = ["crates/domain", "crates/grpc-server", "crates/indexer", "crates/subscriber"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
elasticsearch = "8.15.0-alpha.1"
redis = { version = "0.25", features = ["tokio-comp"] }
async-nats = "0.35"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tonic-reflection = "0.12"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = "1"
thiserror = "1"
