[package]
name = "content-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
content-domain = { path = "../domain" }
sqlx = { workspace = true }
redis = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
