[package]
name = "search-grpc-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "search-service"
path = "src/main.rs"

[dependencies]
search-domain = { path = "../domain" }
search-indexer = { path = "../indexer" }
search-subscriber = { path = "../subscriber" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tonic-reflection = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
