[package]
name = "search-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
search-domain = { path = "../domain" }
elasticsearch = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
