[package]
name = "search-subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
search-domain = { path = "../domain" }
search-indexer = { path = "../indexer" }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures-util = "0.3"